nodejs-express-api/kubernetes/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-api-service
spec:
  type: ClusterIP
  selector:
    app: nodejs-api-selector
  ports:
    - port: 80
      targetPort: 3000
