nodejs-express-api/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-api-service
spec:
  type: NodePort
  selector:
    app: nodejs-api-selector
  ports:
    - name: http
      port: 3000
