nodejs-express-api/kubernetes/ingress-v119.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
spec:
  tls:
    - hosts:
        - dev-gw.iks-garage-bootcamps-ddd93d3a0fef01f6b396b69d343df410-0000.eu-de.containers.appdomain.cloud
      secretName: iks-garage-bootcamps-ddd93d3a0fef01f6b396b69d343df410-0000
  rules:
    - host: dev-gw.iks-garage-bootcamps-ddd93d3a0fef01f6b396b69d343df410-0000.eu-de.containers.appdomain.cloud
      http:
        paths:
          - path: /testers
            pathType: Prefix
            backend:
              service:
                name: nodejs-api-service
                port:
                  number: 3000
          - path: /students
            pathType: Prefix
            backend:
              service:
                name: nodejs-api-service
                port:
                  number: 3000
