nodejs-express-api/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: public-iks-k8s-nginx
spec:
  tls:
    - hosts:
        - iks-garage-dach-21-ddd93d3a0fef01f6b396b69d343df410-0000.eu-de.containers.appdomain.cloud
      secretName: iks-garage-dach-21-ddd93d3a0fef01f6b396b69d343df410-0000
  rules:
    - host: iks-garage-dach-21-ddd93d3a0fef01f6b396b69d343df410-0000.eu-de.containers.appdomain.cloud
      http:
        paths:
          - path: /testers
            backend:
              serviceName: nodejs-api-service
              servicePort: 3000
          - path: /students
            backend:
              serviceName: nodejs-api-service
              servicePort: 3000
